PSP/examenPsp-AdrianSaavedra/RestExamen-AdrianSaavedra/src/main/java/org/example/restexamenadriansaavedra/common/errors/ApiError.java
package org.example.restexamenadriansaavedra.common.errors;

public record ApiError(String message) {
}
